<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:background="@drawable/twitter_bgandlogo"
  android:layout_height="fill_parent"
  android:paddingTop="100px"
  android:orientation="vertical">
  
<LinearLayout android:paddingTop="20px" android:id="@+id/login_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="top|center">
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/twitter_id" android:textColor="#323232"></TextView>
	<View android:layout_width="3px" android:layout_height="5px"/>
	<EditText android:layout_width="407px" android:layout_height="72px" android:background="@drawable/twitter_inputbox_off" android:id="@+id/twitter_id" android:paddingLeft="8px"></EditText>
	<View android:layout_width="3px" android:layout_height="8px"/>
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/twitter_password" android:textColor="#323232"></TextView>
	<View android:layout_width="3px" android:layout_height="5px"/>
	<EditText android:layout_width="407px" android:layout_height="72px" android:background="@drawable/twitter_inputbox_off" android:password="true" android:id="@+id/twitter_pw" android:padding="8px"></EditText>
	<View android:layout_width="3px" android:layout_height="15px"/>
	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="horizontal">
		<ImageButton android:id="@+id/Signbtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/twitter_sign_btn"></ImageButton>
		<TextView android:layout_height="wrap_content" android:id="@+id/TextView03" android:layout_width="wrap_content" android:textColor="#323232" android:layout_centerVertical="true" android:layout_alignParentRight="true" android:text="@string/twitter_sign_auto"></TextView>
		<ImageView android:layout_toLeftOf="@+id/TextView03" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_width="wrap_content" android:src="@drawable/twitter_checkbox_off" android:paddingRight="5px" android:id="@+id/twitter_chk"></ImageView>
	</RelativeLayout>
</LinearLayout>
<LinearLayout android:visibility="invisible" android:id="@+id/write_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="top|center">
	<EditText android:background="@drawable/twitter_tweet_box" android:layout_height="262px" android:layout_width="407px" android:id="@+id/twitte_box" android:paddingLeft="8px"></EditText>	
	<View android:layout_width="3px" android:layout_height="15px"/>
	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="horizontal">
		<ImageButton android:id="@+id/Tweetbtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/twitter_tweet_btn" android:layout_alignParentLeft="true"></ImageButton>
		<ImageButton android:id="@+id/Cancelbtn" android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="@drawable/twitter_cancel_btn" android:layout_alignParentRight="true"></ImageButton>
	</RelativeLayout>

</LinearLayout>
<LinearLayout android:visibility="invisible" android:id="@+id/suc_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="top|center">
	<ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/twitter_toast" android:layout_gravity="center" android:paddingTop="50px"></ImageView>
</LinearLayout>

</FrameLayout>
